Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17763

Added Expression Evaluators are not resolved automatically

XMLWordPrintable

    • b99059bfd6ee693617d5936857f40e49a5f7a4bd

      When you add an Expression Evaluator its value and type are not resolved. You need to either continue debugging or manually click the value field to make Qt Creator to resolve the value and type. See the attached screenshot (qtcreatorbug.png) for reference.

      Tested on Windows and Mac; probably platform independent.

        For Gerrit Dashboard: QTCREATORBUG-17763
        # Subject Branch Project Status CR V

            hjk hjk
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes