Debugger: Run fresh expression evaluator also in combined debugging

doUpdateLocals() was called, but not re-implemented in the
combined case.

Task-number: QTCREATORBUG-17763
Change-Id: Id8c17ce0bda79cd61c57624aea5a05e4aad96c79
Reviewed-by: Christian Stenger <christian.stenger@qt.io>